# ambit

./: Cargo.toml  README.md
.github/workflows/: cicd.yml  rust.yml
src/: cmd.rs  directories.rs  error.rs  lexer.rs  lib.rs  linker.rs  parser.rs
src/config/: ast.rs  lexer.rs  mod.rs  parser.rs  strgen.rs
tests/: integration_tests.rs
