[package]
name = "ambit"
version = "0.1.0"
authors = ["Edward Wibowo <wibow9770@gmail.com>", "Vir Chaudhury <virchau13@mail.hexular.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ambit"
path = "src/bin/main.rs"

[dependencies]
