[package]
name = "ambit"
version = "0.1.0"
authors = ["Edward Wibowo <wibow9770@gmail.com>", "Vir Chaudhury <virchau13@mail.hexular.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ambit"
path = "src/bin/ambit/main.rs"

[dependencies]
clap = "2.33.3"
dirs = "3.0.1"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "1.0.3"
tempfile = "3.2.0"
